[gd_scene load_steps=2 format=3 uid="uid://settings_menu"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_script"]

[node name="SettingsMenu" type="CanvasLayer"]
layer = 11
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
size_flags_vertical = 3

[node name="Controls" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SensitivityContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Controls"]
layout_mode = 2

[node name="SensitivityLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Controls/SensitivityContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Sensitivity:"

[node name="SensitivitySlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Controls/SensitivityContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="SensitivityValue" type="Label" parent="Panel/VBoxContainer/TabContainer/Controls/SensitivityContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1.0"
horizontal_alignment = 2

[node name="InvertPitchCheck" type="CheckButton" parent="Panel/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
text = "Invert Pitch"

[node name="ControllerInfo" type="Label" parent="Panel/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "No controller detected"

[node name="Graphics" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="QualityContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2

[node name="QualityLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Graphics/QualityContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Quality:"

[node name="QualityOption" type="OptionButton" parent="Panel/VBoxContainer/TabContainer/Graphics/QualityContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSyncCheck" type="CheckButton" parent="Panel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
button_pressed = true
text = "VSync"

[node name="FullscreenCheck" type="CheckButton" parent="Panel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
text = "Fullscreen"

[node name="Audio" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="MasterContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Audio/MasterContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Master Volume:"

[node name="MasterSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Audio/MasterContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="MasterValue" type="Label" parent="Panel/VBoxContainer/TabContainer/Audio/MasterContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="EngineContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="EngineLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Audio/EngineContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Engine Volume:"

[node name="EngineSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Audio/EngineContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.8

[node name="EngineValue" type="Label" parent="Panel/VBoxContainer/TabContainer/Audio/EngineContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ApplyButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "Apply"

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "Back"
